input was changed to button

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             />
             <small>Please provide a valid email address</small>
           </div>
-
-          <input type="submit" value=" Notify Me" id="btn" class="btn" />
+          <button type="submit" id="btn" class="btn">Notify Me</button>
         </form>
       </header>
       <!-- HEADER ENDS -->
